app/assets/stylesheets/blacklight_gallery/slideshow.css
.slideshow-modal {
  .modal-dialog {
    width: 100%;
    margin: 1% auto;

    .modal-content {
      background-color: var(--bs-gray-dark);
    }

    .modal-header {
      border-bottom: none;
      padding: 0.5rem 1rem;

      .close {
        font-size: 2.5rem;
        color: white;
      }
    }

    .modal-body {
      padding: 1%;
      height: 90%;
    }
  }
}

.slideshow-presenter {
  height: 100%;

  .slideshow-inner {
    height: 100%;
    overflow: hidden;
    padding-bottom: 20px;

    .item {
      width: 100%;
      height: 100%;
      vertical-align: middle;
      position: relative;

      .frame {
        margin: 0 auto;
        text-align: center;
        vertical-align: middle;
        overflow: auto;
        padding-bottom: 5px;

        img {
          display: inline-block;
          max-width: 100%;
          vertical-align: middle;
        }
      }
    }
  }

  .carousel-control {
    position: absolute;
    top: 0;
    height: 100%;
    width: 50px;

    .blacklight-icons {
      display: block;
      position: absolute;
      width: 3rem;
      top: calc(50% - 3rem);

      svg {
        height: 3rem;
        width: 3rem;
        fill: var(--bs-gray-400);
      }
    }
  }
  .carousel-control.left {
    left: 0px;
  }
  .carousel-control.right {
    right: 0px;
  }

  .caption {
    font-size: 1rem;
    margin: 10px auto;
    min-width: 200px;
    max-width: 50%;
    a {
      color: var(--bs-gray-400);
      text-decoration: underline;
      &:hover,
      &:focus {
        color: var(--bs-white);
      }
    }
  }

  .counter {
    border-radius: 12px;
    border: 1px solid var(--bs-gray-400);
    color: var(--bs-gray-400);
    font-size: 1rem;
    overflow: auto;
    padding: 4px 10px;
    text-align: center;
  }

  .controls {
    svg {
      fill: var(--bs-gray-400);
      width: 32px;
      height: 32px;
    }
  }
}

.documents-slideshow {
  margin: 0;

  .info {
    text-align: center;
    margin-bottom: 15px;
  }

  .slideshow h3 {
    background-color: whitesmoke;
    border-radius: 3px;
    border: 1px solid var(--bs-gray-400);
    display: inline-block;
    font-size: 16px;
    margin: 10px auto;
    padding: 10px 15px;
  }

  .grid {
    display: flex;
    flex-wrap: wrap;
    --square-thumb-size: 100px;

    .document {
      display: flex;
      margin-right: 20px;
      margin-top: 0;
      padding-top: 0;
      border-bottom: 0;
      margin-bottom: 1rem;

      .thumbnail {
        border: 1px solid var(--bs-gray-400);
        border-radius: 0;
        min-height: var(--square-thumb-size);
        min-width: var(--square-thumb-size);
        overflow: hidden;
        padding: 0px;
        position: relative;
        width: var(--square-thumb-size);

        img {
          height: var(--square-thumb-size);
          max-height: none;
          max-width: none;
          object-fit: cover;
          position: absolute;
          width: var(--square-thumb-size);
        }
      }
    }
  }
}

